[package]
name = "wasm-drag-drop-test"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "Event",
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "File",
    "Text",
] }

[lib]
crate-type = ["cdylib"]
